--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,5 +42,30 @@
         android:id="@+id/loginFragment"
         android:name="com.example.csci310_wangstans.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_LoginFragment_to_RegisterFragment"
+            app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_LoginFragment_to_MapHomePage"
+            app:destination="@id/mapHomePage" />
+    </fragment>
+    <fragment
+        android:id="@+id/mapHomePage"
+        android:name="com.example.csci310_wangstans.MapHomePage"
+        android:label="fragment_map_home_page"
+        tools:layout="@layout/fragment_map_home_page">
+        <action
+            android:id="@+id/action_MapHomePage_to_BookingFragment"
+            app:destination="@id/bookingFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.csci310_wangstans.RegisterFragment"
+        android:label="fragment_register"
+        tools:layout="@layout/fragment_register">
+        <action
+            android:id="@+id/action_RegisterFragment_to_LoginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
