--- a/app/src/main/res/layout/fragment_map_home_page.xml
+++ b/app/src/main/res/layout/fragment_map_home_page.xml
@@ -18,15 +18,23 @@
         android:layout_margin="10dp"
         android:background="@color/gray">
 
-        <TextView
-            android:id="@+id/upcomingReservations"
+        <LinearLayout
+            android:id="@+id/reservation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upcoming Registrations"
-            android:textColor="#000"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_margin="10dp"/>
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/upcomingReservations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Upcoming Registrations"
+                android:textColor="#000"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:layout_margin="10dp"/>
+        </LinearLayout>
 
     </ScrollView>
 
