--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -14,12 +14,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
+        android:layout_marginTop="104dp"
         android:layout_marginEnd="89dp"
         android:layout_marginBottom="10dp"
         android:text="Upcoming Reservations"
         app:layout_constraintBottom_toTopOf="@+id/pastResButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.941" />
 
     <Button
         android:id="@+id/pastResButton"
@@ -36,7 +40,7 @@
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="409dp"
-        android:layout_height="518dp"
+        android:layout_height="450"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="2dp"
