--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,12 +15,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/usc" />
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="Login to USCRecCenter App"
             android:textColor="#000"
+            android:layout_marginTop="30dp"
             android:textSize="20dp"
             android:textStyle="bold" />
 
