--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -15,11 +15,18 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/usc" />
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Register"
+            android:marginTop="30dp"
             android:textColor="#000"
             android:textSize="20dp"
             android:textStyle="bold" />
