--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Register"
-            android:marginTop="30dp"
+            android:layout_marginTop="30dp"
             android:textColor="#000"
             android:textSize="20dp"
             android:textStyle="bold" />
