--- a/app/src/main/res/layout/fragment_reccenter.xml
+++ b/app/src/main/res/layout/fragment_reccenter.xml
@@ -5,19 +5,7 @@
     android:id="@+id/recCenterLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecCenterFragment">
-
-    <TextView
-        android:id="@+id/heading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cromwell Track Bookings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.02
-" />
+    tools:context=".CRecCenterFragment">
 
     <TextView
         android:id="@+id/datePickerLabel"
@@ -26,10 +14,10 @@
         android:text="Select Date:"
         app:layout_constraintBottom_toTopOf="@+id/datePicker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.193"
+        app:layout_constraintHorizontal_bias="0.196"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heading"
-        app:layout_constraintVertical_bias="0.551" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <DatePicker
         android:id="@+id/datePicker"
@@ -41,7 +29,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heading"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.066" />
 
     <Button
@@ -53,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/datePicker"
-        app:layout_constraintVertical_bias="0.040" />
+        app:layout_constraintVertical_bias="0.014" />
 
     <ScrollView
         android:layout_width="match_parent"
