--- a/app/src/main/res/layout/fragment_map_home_page.xml
+++ b/app/src/main/res/layout/fragment_map_home_page.xml
@@ -13,13 +13,18 @@
         android:src="@drawable/background" />
 
     <ScrollView
+        android:id="@+id/scrollView4"
+
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/gray">
 
         <LinearLayout
-            android:id="@+id/reservation"
+            android:id="@+id/reservations"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
@@ -30,12 +35,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:drawableRight="@drawable/arrow"
+                android:drawablePadding="5dp"
                 android:text="Upcoming Reservations"
                 android:textColor="#000"
                 android:textSize="10dp"
-                android:textStyle="bold"
-                android:drawableRight="@drawable/arrow"
-                android:drawablePadding="5dp"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
     </ScrollView>
