styling and title bar

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,7 +38,7 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.csci310_wangstans.LoginFragment"
-        android:label="fragment_login"
+        android:label="Login"
         tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_LoginFragment_to_RegisterFragment"
@@ -50,7 +50,7 @@
     <fragment
         android:id="@+id/mapHomePage"
         android:name="com.example.csci310_wangstans.MapHomePage"
-        android:label="fragment_map_home_page"
+        android:label="Home Page"
         tools:layout="@layout/fragment_map_home_page">
         <action
             android:id="@+id/action_MapHomePage_to_CRecCenterFragment"
@@ -78,7 +78,7 @@
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.csci310_wangstans.RegisterFragment"
-        android:label="fragment_register"
+        android:label="Register"
         tools:layout="@layout/fragment_register">
         <action
             android:id="@+id/action_RegisterFragment_to_LoginFragment"
@@ -87,6 +87,6 @@
     <fragment
         android:id="@+id/reservationFragment"
         android:name="com.example.csci310_wangstans.ReservationFragment"
-        android:label="fragment_reservation"
+        android:label="Reservations"
         tools:layout="@layout/fragment_reservation" />
 </navigation>
