--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".LoginFragment">
+    tools:context=".LoginFragment"
+    android:id="@+id/fragment_register">
 
     <LinearLayout
         android:gravity="center"
