--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -63,8 +63,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:hint="Password"
             android:inputType="textPersonName"
-            android:hint="Password"/>
+            tools:ignore="TouchTargetSizeCheck" />
 
         <Button
             android:id="@+id/buttonRegister"
