--- a/app/src/main/res/layout/fragment_map_home_page.xml
+++ b/app/src/main/res/layout/fragment_map_home_page.xml
@@ -31,7 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:ignore="TouchTargetSizeCheck">
 
             <TextView
                 android:id="@+id/upcomingReservations"
