--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -58,4 +58,22 @@
             app:layout_constraintTop_toBottomOf="parent"></LinearLayout>
     </ScrollView>
 
+    <View
+        android:id="@+id/idto1r"
+        android:layout_width="4dp"
+        android:layout_height="4dp"
+        android:layout_marginTop="75dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/idto2r"
+        android:layout_width="5dp"
+        android:layout_height="5dp"
+        android:layout_marginTop="50dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
