--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     android:gravity="center"
     tools:context=".LoginFragment"
     android:id="@+id/fragment_login">
@@ -24,44 +25,57 @@
 
         <TextView
             android:id="@+id/textView"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login to USCRecCenter App"
-            android:textColor="#000"
+            android:text="USCRecCenter App"
+            android:textColor="@color/white"
             android:layout_marginTop="30dp"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/editUserName"
+            android:background="@drawable/rounded_rectangle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:ems="10"
-            android:hint="Username"
+            android:hint="username"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingLeft="20dp"
             android:inputType="textPersonName"
-            android:minHeight="48dp" />
+            android:minHeight="40dp" />
 
         <EditText
             android:id="@+id/editPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_rectangle"
             android:ems="10"
-            android:hint="Password"
+            android:hint="password"
             android:inputType="textPersonName"
-            android:minHeight="48dp" />
+            android:minHeight="40dp"
+            android:paddingLeft="20dp"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            app:passwordToggleEnabled="true" />
 
         <Button
             android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:backgroundTint="@color/yellow"
+            android:textColor="@color/black"
             android:text="Log in" />
 
         <Button
             android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
             android:text="Register" />
 
     </LinearLayout>
