--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     android:gravity="center"
     tools:context=".LoginFragment"
     android:id="@+id/fragment_register">
@@ -26,66 +27,98 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Register"
             android:layout_marginTop="30dp"
-            android:textColor="#000"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textColor="@color/white"
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/editUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="Username"/>
+            android:background="@drawable/rounded_rectangle"
+            android:minHeight="40dp"
+            android:hint="username"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingLeft="20dp"/>
 
         <EditText
             android:id="@+id/editUserID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="number"
-            android:hint="USC ID"/>
+            android:background="@drawable/rounded_rectangle"
+            android:minHeight="40dp"
+            android:hint="usc id"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingLeft="20dp"/>
 
         <EditText
             android:id="@+id/editName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="Name"/>
+            android:background="@drawable/rounded_rectangle"
+            android:minHeight="40dp"
+            android:hint="name"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingLeft="20dp"/>
 
         <EditText
             android:id="@+id/editEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:hint="Email"/>
+            android:background="@drawable/rounded_rectangle"
+            android:minHeight="40dp"
+            android:hint="email"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingLeft="20dp"/>
 
         <EditText
             android:id="@+id/editPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:ems="10"
-            android:hint="Password"
+            android:hint="password"
             android:inputType="textPersonName"
+            android:background="@drawable/rounded_rectangle"
+            android:minHeight="40dp"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:paddingLeft="20dp"
             tools:ignore="TouchTargetSizeCheck" />
 
         <Button
             android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register" />
+            android:layout_marginTop="21dp"
+            android:backgroundTint="@color/yellow"
+            android:text="Register"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/buttonRegisterToLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="?android:attr/selectableItemBackground"
             android:text="Already Have An Account?" />
 
     </LinearLayout>
