--- a/app/src/main/res/layout/fragment_map_home_page.xml
+++ b/app/src/main/res/layout/fragment_map_home_page.xml
@@ -8,48 +8,87 @@
     android:id="@+id/map_home_page"
     >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/gray"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/home"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="260dp"
+            android:src="@drawable/selected_home"
+            android:background="@android:color/transparent"/>
+
+        <ImageButton
+            android:id="@+id/about"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/about"
+            android:background="@android:color/transparent"/>
+
+        <ImageButton
+            android:id="@+id/profile"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/profile"
+            android:background="@android:color/transparent"/>
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/background"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         android:scaleType="centerCrop"
         android:src="@drawable/background" />
 
-    <ScrollView
-        android:id="@+id/scrollView4"
-
+    <RelativeLayout
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@color/gray">
 
-        <LinearLayout
-            android:id="@+id/reservations"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:orientation="vertical"
-            tools:ignore="TouchTargetSizeCheck">
+        <ScrollView
+            android:id="@+id/scrollView4"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp">
 
-            <TextView
-                android:id="@+id/upcomingReservations"
+            <LinearLayout
+                android:id="@+id/reservations"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:drawableRight="@drawable/arrow"
-                android:drawablePadding="5dp"
-                android:text="Upcoming Reservations"
-                android:textColor="#000"
-                android:textSize="15dp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:clickable="true"
+                android:orientation="vertical"
+                tools:ignore="TouchTargetSizeCheck">
 
+                <TextView
+                    android:id="@+id/upcomingReservations"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:drawableRight="@drawable/arrow"
+                    android:drawablePadding="5dp"
+                    android:text="Upcoming Reservations"
+                    android:textColor="@color/white"
+                    android:textSize="14dp"
+                    android:textStyle="bold" />
 
-        </LinearLayout>
+            </LinearLayout>
 
-    </ScrollView>
+        </ScrollView>
+
+    </RelativeLayout>
 
     <View
         android:id="@+id/hsc"
