--- a/app/src/main/res/layout/fragment_reccenter.xml
+++ b/app/src/main/res/layout/fragment_reccenter.xml
@@ -5,6 +5,7 @@
     android:id="@+id/recCenterLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     tools:context=".CRecCenterFragment">
 
     <LinearLayout
@@ -29,7 +30,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:gravity="center"
-            android:text="hello"
+            android:text="Rec Center"
             android:textColor="@color/white" />
 
         <ImageButton
@@ -63,12 +64,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Date:"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/datePicker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.196"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.3" />
+        app:layout_constraintVertical_bias="1.4" />
 
     <DatePicker
         android:id="@+id/datePicker"
@@ -77,6 +79,7 @@
         android:layout_margin="10dp"
         android:calendarViewShown="false"
         android:datePickerMode="spinner"
+        android:theme="@style/MyDatePicker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +91,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="See Bookings for Date"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/yellow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
